# algorithms-study

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: azure-pipelines.yml  continuous_integration.yml
Algorithms/Quicksort/: __init__.py
ORGANIZE/: README.md
docs/: contributing.md  index.md  user-guide.md
docs/stylesheets/: extra.css
tests/: test_catdog.py
