[tool.poetry]
name = "prometheus"
version = "0.1.0"
description = "Firem"
authors = ["Bruno Alves Comitre <bruno-comitre@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.3.1"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_lenght = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
run = "poetry run python app/main.py"
pre_test = "task lint"
test = "pytest -s -x --cov=Klinks -vv"
post_test = "coverage html"
